# python-project-lvl4

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pyci.yml
fixtures/: labels.json  statuses.json  tasks.json  users.json
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: __init__.py  constants.py  mixins.py  settings.py  translations.py  urls.py  views.py
task_manager/labels/: __init__.py  admin.py  constants.py  forms.py  models.py  tests.py  translations.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: __init__.py  admin.py  constants.py  forms.py  models.py  tests.py  translations.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: __init__.py  admin.py  constants.py  forms.py  models.py  tests.py  translations.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_author_alter_task_executor.py  0002_initial.py  0003_alter_task_author_alter_task_executor.py  0003_alter_task_labels.py  0004_alter_task_executor.py
task_manager/users/: admin.py  constants.py  forms.py  tests.py  translations.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
templates/: base.html  delete.html  form.html  index.html  labels_list.html  statuses_list.html  task_details.html  tasks_list.html  user_list.html  users_list.html
