[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "training Django project"
authors = ["EvilMadSquirrel <minichev.s.l@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
python-dotenv = "^0.19.2"
gunicorn = "^20.1.0"
whitenoise = "^6.0.0"
django-bootstrap4 = "^22.1"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
